--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,99 @@
-.App {
-  text-align: center;
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+:root {
+  --primary: #161a1e;
+  --black: #000;
+  --containerwidth: 1180px;
+  --white-smoke: #f8f8f8;
+  --white: #ffffff;
+  --grey: #696969;
+  --lightgrey: #585858;
+  --fontColor: #464545;
+  --hoverFont: #a5a5a5;
+  --s: 0.5rem;
+  --sl: 0.8rem;
+  --l: 0.9rem;
+  --xl: 1rem;
+  --xxl: 1.5rem;
+}
+body{
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  font-family: "Poppins", sans-serif;
+  overflow-x: hidden;
+}
+.App{
+  max-width: 1160px;
+  border: 1px solid white;
+  margin: auto;
+}
+@media screen  and (max-width:800px) {
+  body{
+    overflow-x: hidden !important;
+  }
+  .info,.navMenu{
+    background-color: green;
+    display: none !important;
+  }
+  .serviceContainer .heading2{
+    width:100% ;
+    font-size: 2rem;
+    letter-spacing: 0.06rem;
+  }
+  .serviceContainer{
+    padding: 0px !important;
+  }
+  .servicesDiv{
+    display: flex !important;
+    flex-direction: column !important;
+    width: 100%;
+    padding: 0px !important;
+  }
+  .servicesDiv a{
+    width: 100% !important;
+  }
+  .inline-cont{
+    display: flex !important;
+    flex-direction: column !important;
+    padding: 3rem !important;
+  }
+  .inline-btn-cont{
+    flex: 2 !important;
+    display: flex !important;
+    flex-direction: row !important;
+    align-items: center;
+    width: 100%;
+    /* background-color: var(--grey); */
+}
+.header-banner-head {
+  margin-top: -1rem !important;
+  text-align: center !important;
+  font-size: 2.5rem !important;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+  
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@media only screen and (max-width: 500px){
+
+  .inline-cont {
+    width: auto;
+    max-width: 80%;
+    display: flex;
+    flex-direction: column;
+
+    margin: auto;
+    height: 22rem;
   }
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+@media only screen and (max-width: 470px){
+  .heading2{
+    font-size: 1.5rem !important;
+    padding: 0px !important;
+    margin: 0px !important;
   }
 }
